# ATC_3D

./: CMakeLists.txt  README.md  main_ATC3D.cpp
MeaningfulThickness/: CMakeLists.txt  displayNoiseBS.cpp  noiseBS.cpp  noiseBSclean.cpp  noiseBSfct.cpp  noiseBSparam.cpp
MeaningfulThickness/ImaGene/src/helper/: ContourHelper.cxx
helpers/: AlphaThickSeg3DComputer.h  AlphaThickSeg3DComputer.ih  GeomHelpers.cpp  GeomHelpers.h  MThelpers.cpp  MThelpers.h  maximalblurredsegment.cpp  maximalblurredsegment.h  maximalblurredsegment3D.cpp  maximalblurredsegment3D.h
