cmake_minimum_required(VERSION 3.5)
project(MeaningfulThickness)
set (CMAKE_CXX_STANDARD 11)

SET(SOURCE_BASE_HEADER_FILES
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/base/Proxy.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/dgeometry2d/C4CGeometry.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/dgeometry2d/C4CSegmentPencil.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/base/Vector2i.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/base/Arguments.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/base/StandardArguments.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/mathutils/Mathutils.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/mathutils/Statistics.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/timetools/Clock.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/dgeometry2d/C4CTangentialCover.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/helper/C4CTangentialCoverGeometry.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/dgeometry2d/FreemanChain.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/dgeometry2d/FreemanChainTransform.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/dgeometry2d/C4CIteratorOnFreemanChain.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/digitalnD/C4CIteratorOnFreemanChainSurface.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/digitalnD/KnSpace.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/digitalnD/C4CIteratorOnSurface.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/helper/ShapeHelper.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/helper/ScaleProfile.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/helper/MultiscaleProfile.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/helper/DrawingXFIG.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/helper/CurveVariationsHelper.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/helper/ContourHelper.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/mathutils/SimpleLinearRegression.h
	${PROJECT_SOURCE_DIR}/ImaGene/include/ImaGene/dgeometry2d/BlurredSegmentTgtCover.h
)

SET(SOURCE_BASE_FILES
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/Arguments.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/HashTable.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/Matrix.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/OrderedAlphabet.cxx
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/Proxy.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/Signal.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/StandardArguments.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/StandardHashTable.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/StaticHashTable.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/RnMaps.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/Shapes.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/SmartSet.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/UndoableList.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/Vector.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/Vector2i.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/VectorUtils.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/base/WordUtils.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/timetools/Alarm.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/timetools/Clock.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/C4CELength.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/C4CGeometry.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/C4CIterator.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/C4CIteratorOnFreemanChain.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/C4CSegment.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/C4CSegmentPencil.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/C4CTangentialCover.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/CurveCode.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/DLine.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/DMLPContour.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/EuclideanGeometry.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/FreemanChain.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/FreemanChainTransform.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/FreemanFrame2D.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/GridCurve.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/MultiscaleFreemanChain.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/OctantChange.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/dgeometry2d/BlurredSegmentTgtCover.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/AreaOnSurfaceComputerByEuler.cxx  
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/BelAdjacency.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/Bitset1.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/BoxEmbedder.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/C4CIteratorOnBdry.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/C4CIteratorOnExplicitDigitalSurface.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/C4CIteratorOnFreemanChainSurface.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/CentroidEmbedder.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/CubicalCell.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/CubicalComplex.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/CubicalSpace.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/DigitalSurface.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/DigitalSurfaceGeometry.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/DigitalSurfaceUmbrella.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/DigitalSurfaceUmbrellaComputer.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/Embedder.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/ExplicitDigitalSurface.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/ExplicitDigitalSurfaceTracker.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/Frame2D.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/GeometryComputerByContour4.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/GridEmbedder.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/K2Space.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/K3Isosurface.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/K3Isosurface_k6_l18.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/K3Shapes.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/KnCharSet.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/KnRCellSet.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/KnRCellVector.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/KnShapes.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/KnSpace.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/KnSpaceCoordScanner.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/KnSpaceScanner.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/KnTools.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/KnTypes.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/KnUtils.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/MeanCurvatureOnSurfaceComputerByDG.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/ObjectBoundary.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/ObjectBoundaryTracker.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/Sanitizer.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/SmoothingEmbedder.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/SurfelNeighborhood.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/digitalnD/NormalOnSurfaceComputerByUmbrellas.cxx	 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/C4CTangentialCoverGeometry.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/ChangeQuadrant.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/CharacteristicPolygon.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/ContourHelper.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/CurveVariationsHelper.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/DigitalElevationMap.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/DigitalElevationMapStats.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/DrawingXFIG.cxx
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/GlobalC4CGeometry.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/ImageMultiscaleAnalysis.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/LinearMinimizer.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/MultiscaleProfile.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/ScaleProfile.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/ShapeHelper.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/VisualCurvature.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/Color.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/helper/MeaningfulContinuation.cxx
	${PROJECT_SOURCE_DIR}/ImaGene/src/image/Pixel.cxx
	${PROJECT_SOURCE_DIR}/ImaGene/src/image/Image2D.cxx
	${PROJECT_SOURCE_DIR}/ImaGene/src/image/Image2DUtils.cxx
	${PROJECT_SOURCE_DIR}/ImaGene/src/image/PGMFilter.cxx
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/CFraction.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/Functions.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/G.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/DG.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/Lattice.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/Line2D.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/Mathutils.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/Polynomial.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/Polynomial3.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/PWFAffineFunction.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/SampledFunction.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/SimpleLinearRegression.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/Statistic.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/Statistics.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/SternBrocot.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/mathutils/MeasureOfStraightLines.cxx
	${PROJECT_SOURCE_DIR}/ImaGene/src/3d/C4CIteratorOnImplicitDigitalSurface.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/3d/ImplicitDigitalSurface.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/3d/ImplicitDigitalSurfaceTracker.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/3d/ImplicitExtension.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/3d/ImplicitSurface.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/3d/ImplicitSurfaceHelper.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/3d/ImplicitSurfaceProjector.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/3d/ImplicitSurfaces.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/3d/ImplicitSurfaces3D.cxx 
	${PROJECT_SOURCE_DIR}/ImaGene/src/3d/ImplicitSurfaceEmbedder.cxx 
)

include_directories("${PROJECT_SOURCE_DIR}/ImaGene/include")
#add_subdirectory (${PROJECT_SOURCE_DIR}/ImaGene/src)
add_subdirectory (${PROJECT_SOURCE_DIR}/ImaGene/include)

#aux_source_directory(. SRC_LIST)
SET(SRC_LIST noiseBS.cpp)
add_executable(${PROJECT_NAME} ${SRC_LIST} ${SOURCE_BASE_FILES} ${SOURCE_BASE_HEADER_FILES})

